# temp

./: README.md
deploy/: docker_setup.sh  run_all.sh  (+4 more)
vision_stack/: pyproject.toml
vision_stack/configs/: camera.yaml  control.yaml  esp32_gpio.yaml  mavlink.yaml  mavproxy.yaml  perception.yaml  targeting.yaml  tracker.yaml  video.yaml
vision_stack/configs/modes/: bench_px4_v1_16.yaml  flight.yaml
vision_stack/docs/: QGC_INTEGRATION.md
vision_stack/scripts/: run_all_bench.sh  run_control.sh  run_esp32_gpio_bridge.sh  run_mavlink_bridge.sh  run_mavproxy.sh  run_oak_bridge.sh  run_perception.sh  run_targeting.sh  run_video_streamer.sh
vision_stack/src/: __init__.py  main.py
vision_stack/src/common/: __init__.py  filters.py  math3d.py  types.py
vision_stack/src/control/: __init__.py  control_mapper.py  control_node.py  safety_manager.py
vision_stack/src/esp32/: __init__.py  esp32_gpio_bridge.py  gpio_reader.py
vision_stack/src/mavlink/: __init__.py  custom_telemetry.py  failsafe.py  mavlink_bridge.py  offboard_session.py  setpoints_attitude.py  telemetry.py  user_commands.py
vision_stack/src/mavproxy/: __init__.py  mavproxy_cmd_builder.py  mavproxy_service.py
vision_stack/src/oak/: __init__.py  depth_query.py  oak_bridge.py
vision_stack/src/perception/: __init__.py  detector.py  perception_node.py  tracker.py
vision_stack/src/targeting/: __init__.py  errors.py  lock_manager.py  targeting_node.py
vision_stack/src/video/: __init__.py  video_streamer.py
vision_stack/tests/: test_safety_manager.py  test_setpoints_attitude.py  test_user_commands.py
(+19 files in other folders)
